<resources>
    <string name="app_name">SharedCalendarApp</string>
    <string name="default_calendar_name">My Calendar</string>
    <string name="title_activity_main_calendar">MainCalendarActivity</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="events_collection">events</string>
    <string name="event_deleted">Event deleted</string>
    <string name="add_new_event">Add New Event</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="event_add_error">Event must have a title</string>
    <string name="login_error">Login error</string>
    <string name="registration_ok">Registration OK</string>
    <string name="registration_error">Register error</string>
    <string name="et_email_error">This field can not be empty</string>
    <string name="et_password_error">This field can not be empty</string>
    <string name="error">Error:</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="email">email</string>
    <string name="janedoe_email">janedoe@website.hu</string>
    <string name="password_123654">123654</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="description">Description</string>
    <string name="all_day">All Day</string>
    <string name="title">Title</string>
    <string name="colon">:</string>
    <string name="calendar_title">Calendar Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="tv_time">Time</string>
    <string name="tv_date">Date</string>
    <string name="btn_delete">Delete</string>
</resources>
